--- a/templates/default/mailman_aliases.erb
+++ b/templates/default/mailman_aliases.erb
@@ -1,4 +1,4 @@
-## <%=@name%> Mailingliste
+## <%=@name%> Mailinglist
 <%=@name%>:              "|/var/lib/mailman/mail/mailman post <%=@name%>"
 <%=@name%>-admin:        "|/var/lib/mailman/mail/mailman admin <%=@name%>"
 <%=@name%>-bounces:      "|/var/lib/mailman/mail/mailman bounces <%=@name%>"
